crates/strider-analyze/tests/snapshots/v3__ppc64be__calls__pass_through.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x100103a4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "v8" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v8" [color="#888888", style=dashed];
  "v8" -> "6" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "v9" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v9" [color="#888888", style=dashed];
  "v9" -> "6" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "v10" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v10" [color="#888888", style=dashed];
  "v10" -> "6" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "7" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "11" -> "7" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "11" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v12" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "11" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "5" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "13" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "13" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "14" [label="init\nr3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "15" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "15" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "16" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v17" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v17" -> "15" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "13" -> "15" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "18" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "16" [label="StackStore u64\n→ ram[sp - 112]", shape=box3d, fillcolor="#20182a"];
  "19" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v20" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v20" -> "16" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "19" [label="StackStore u64\n→ ram[sp + 16]", shape=box3d, fillcolor="#20182a"];
  "21" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v22" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v22" -> "19" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "23" -> "19" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "21" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "24" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v25" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v25" -> "21" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "26" -> "21" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "26" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "24" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "27" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
